# NCU-TLDR

./: .dockerignore  .env.example  .gitignore  README.md  database-design.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/agents/: fastapi-pro.md  (+1 more)
.githooks/: pre-commit
.husky/: pre-commit
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 2026_02_26_2105-ee6ea0b7b0bf_create_users_departments_teachers_.py  2026_03_17_2348-353b43253264_migration_3_relation_tables_no_fk.py  2026_03_17_2348-50b6a42940f4_migration_1_base_tables_no_fk.py  2026_03_17_2348-a478b363ef7f_migration_6_metadata_and_materialized_.py  2026_03_17_2348-c006c0ea1911_migration_2_courses_and_enum.py  v4__e2f220a299e5__add_foreign_keys.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  comments.py  courses.py  reviews.py  wishlist.py
backend/app/db/: session.py
backend/app/models/: __init__.py  course.py  department.py  teacher.py  user.py  wish.py  wish_vote.py
backend/app/schemas/: course.py
backend/scripts/: automation_note.md  colleges_seed.sql  departments_seeds.sql  migrate_and_seed.ps1  migrate_and_seed.sh
docs/: database-design.md  migration_1_to_6.md
frontend/: .dockerignore  .gitignore  .npmrc  Dockerfile  LINT_MISTAKES.md  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+54 files in other folders)
