[project]
name = "ncu-tldr-backend"
version = "0.1.0.dev1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.47",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]
